# neurx-agent

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  main.cpp
app/bridge/: AgentListModel.cpp  AgentListModel.h  LogModel.cpp  LogModel.h  RuntimeBridge.cpp  RuntimeBridge.h
app/qml/: AppShell.qml  Main.qml
app/qml/components/: AgentCard.qml  ChatBubble.qml  CodeEditor.qml  ExplorerChildren.qml  ExplorerNode.qml  SideNav.qml  StatusDot.qml
app/qml/pages/: AgentsPage.qml  ChatPage.qml  DashboardPage.qml  SettingsPage.qml  ToolsPage.qml
core/: CMakeLists.txt
core/agent/: Agent.cpp  Agent.h  AgentMessage.cpp  AgentMessage.h  AgentRegistry.cpp  AgentRegistry.h  AgentRunner.cpp  AgentRunner.h  CodexAgent.cpp  CodexAgent.h
core/llm/: LlmClient.cpp  LlmClient.h
core/log/: Logger.cpp  Logger.h
core/memory/: MemoryStore.cpp  MemoryStore.h
core/runtime/: AgentRuntime.cpp  AgentRuntime.h  ErrorRecovery.cpp  ErrorRecovery.h  EventBus.cpp  EventBus.h  TaskScheduler.cpp  TaskScheduler.h  WorkspaceContext.cpp  WorkspaceContext.h
core/tools/: BaseTool.cpp  BaseTool.h  ToolRegistry.cpp  ToolRegistry.h
platform/android/: android.cmake
platform/android/package/: AndroidManifest.xml
platform/harmony/: harmony.cmake
platform/ios/: Info.plist.in  ios.cmake
plugins/: CMakeLists.txt  PluginLoader.cpp  PluginLoader.h
plugins/builtin/: CodexWorkspaceTool.cpp  CodexWorkspaceTool.h  ReActAgent.cpp  ReActAgent.h  WebSearchTool.cpp  WebSearchTool.h
